// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extract > a.tsx: function component + hooks + ternary/&&/text 1`] = `
{
  "components": [
    {
      "exported": true,
      "hooks": [
        {
          "binds": [
            "open",
            "setOpen",
          ],
          "call": "useState",
        },
        {
          "binds": [
            "id",
          ],
          "call": "useId",
        },
      ],
      "isDefault": false,
      "name": "Profile",
      "params": [
        {
          "name": null,
          "props": [
            {
              "default": null,
              "local": null,
              "name": "user",
              "rest": false,
            },
            {
              "default": "2",
              "local": null,
              "name": "size",
              "rest": false,
            },
            {
              "default": null,
              "local": null,
              "name": "rest",
              "rest": true,
            },
          ],
          "typeRef": "ProfileProps",
        },
      ],
      "range": [
        9,
        21,
      ],
      "root": {
        "children": [
          {
            "children": [],
            "kind": "component",
            "line": 15,
            "props": {
              "src": {
                "kind": "expr",
                "text": "user.avatar",
              },
            },
            "tag": "Avatar",
          },
          {
            "kind": "expr",
            "line": 16,
            "text": "open ? <span>online</span> : null",
          },
          {
            "kind": "expr",
            "line": 17,
            "text": "user.admin && <Badge />",
          },
          {
            "kind": "text",
            "line": 17,
            "text": "hello",
          },
        ],
        "kind": "element",
        "line": 14,
        "props": {
          "className": {
            "kind": "literal",
            "text": "card",
          },
          "data-open": {
            "kind": "expr",
            "text": "open",
          },
        },
        "tag": "div",
      },
      "symbolType": "function-component",
      "wrappers": [],
    },
  ],
  "exportsSurface": [
    "Profile",
  ],
  "file": "a.tsx",
  "imports": [
    {
      "line": 1,
      "names": [
        "Avatar",
      ],
      "source": "./Avatar",
    },
    {
      "line": 2,
      "names": [
        "Badge",
      ],
      "source": "./Badge",
    },
    {
      "line": 3,
      "names": [
        "useState",
      ],
      "source": "react",
    },
  ],
  "version": "0.1",
}
`;

exports[`extract > b.tsx: arrow expression-body component 1`] = `
{
  "components": [
    {
      "exported": true,
      "hooks": [],
      "isDefault": false,
      "name": "Tag",
      "params": [
        {
          "name": null,
          "props": [
            {
              "default": null,
              "local": null,
              "name": "label",
              "rest": false,
            },
            {
              "default": null,
              "local": "color",
              "name": "tone",
              "rest": false,
            },
          ],
          "typeRef": "TagProps",
        },
      ],
      "range": [
        5,
        9,
      ],
      "root": {
        "children": [
          {
            "kind": "expr",
            "line": 7,
            "text": "label",
          },
        ],
        "kind": "element",
        "line": 6,
        "props": {
          "className": {
            "kind": "literal",
            "text": "tag",
          },
          "data-tone": {
            "kind": "expr",
            "text": "color",
          },
        },
        "tag": "em",
      },
      "symbolType": "arrow-component",
      "wrappers": [],
    },
  ],
  "exportsSurface": [
    "Tag",
  ],
  "file": "b.tsx",
  "imports": [],
  "version": "0.1",
}
`;

exports[`extract > c.tsx: export default function with fragment 1`] = `
{
  "components": [
    {
      "exported": true,
      "hooks": [
        {
          "binds": [
            "user",
          ],
          "call": "useCurrentUser",
        },
      ],
      "isDefault": true,
      "name": "App",
      "params": [],
      "range": [
        3,
        14,
      ],
      "root": {
        "children": [
          {
            "children": [],
            "kind": "component",
            "line": 8,
            "props": {
              "user": {
                "kind": "expr",
                "text": "user",
              },
            },
            "tag": "Profile",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "kind": "text",
                    "line": 10,
                    "text": "© 2026",
                  },
                ],
                "kind": "element",
                "line": 10,
                "props": {},
                "tag": "footer",
              },
            ],
            "kind": "fragment",
            "line": 9,
          },
        ],
        "kind": "element",
        "line": 7,
        "props": {},
        "tag": "main",
      },
      "symbolType": "function-component",
      "wrappers": [],
    },
  ],
  "exportsSurface": [
    "App",
  ],
  "file": "c.tsx",
  "imports": [
    {
      "line": 1,
      "names": [
        "Profile",
      ],
      "source": "./a",
    },
  ],
  "version": "0.1",
}
`;

exports[`extract > d.tsx: memo / forwardRef / nested HOC, multiple components 1`] = `
{
  "components": [
    {
      "exported": true,
      "hooks": [],
      "isDefault": false,
      "name": "Box",
      "params": [
        {
          "name": "props",
          "props": [],
          "typeRef": null,
        },
        {
          "name": "ref",
          "props": [],
          "typeRef": null,
        },
      ],
      "range": [
        7,
        7,
      ],
      "root": {
        "children": [],
        "kind": "element",
        "line": 7,
        "props": {
          "ref": {
            "kind": "expr",
            "text": "ref",
          },
        },
        "tag": "div",
      },
      "symbolType": "arrow-component",
      "wrappers": [
        "forwardRef",
      ],
    },
    {
      "exported": true,
      "hooks": [],
      "isDefault": false,
      "name": "Card",
      "params": [
        {
          "name": null,
          "props": [
            {
              "default": null,
              "local": null,
              "name": "title",
              "rest": false,
            },
          ],
          "typeRef": "CardProps",
        },
      ],
      "range": [
        9,
        11,
      ],
      "root": {
        "children": [
          {
            "kind": "expr",
            "line": 10,
            "text": "title",
          },
        ],
        "kind": "element",
        "line": 10,
        "props": {},
        "tag": "article",
      },
      "symbolType": "function-component",
      "wrappers": [
        "memo",
      ],
    },
    {
      "exported": false,
      "hooks": [],
      "isDefault": false,
      "name": "Shiny",
      "params": [
        {
          "name": "props",
          "props": [],
          "typeRef": null,
        },
        {
          "name": "ref",
          "props": [],
          "typeRef": null,
        },
      ],
      "range": [
        13,
        13,
      ],
      "root": {
        "children": [],
        "kind": "element",
        "line": 13,
        "props": {
          "ref": {
            "kind": "expr",
            "text": "ref",
          },
        },
        "tag": "span",
      },
      "symbolType": "arrow-component",
      "wrappers": [
        "memo",
        "forwardRef",
      ],
    },
  ],
  "exportsSurface": [
    "Box",
    "Card",
  ],
  "file": "d.tsx",
  "imports": [
    {
      "line": 1,
      "names": [
        "forwardRef",
        "memo",
      ],
      "source": "react",
    },
  ],
  "version": "0.1",
}
`;

exports[`extract > e.tsx: anonymous default arrow component 1`] = `
{
  "components": [
    {
      "exported": true,
      "hooks": [],
      "isDefault": true,
      "name": "default",
      "params": [],
      "range": [
        1,
        1,
      ],
      "root": {
        "children": [
          {
            "kind": "text",
            "line": 1,
            "text": "© 2026",
          },
        ],
        "kind": "element",
        "line": 1,
        "props": {},
        "tag": "footer",
      },
      "symbolType": "arrow-component",
      "wrappers": [],
    },
  ],
  "exportsSurface": [
    "default",
  ],
  "file": "e.tsx",
  "imports": [],
  "version": "0.1",
}
`;
